# thesis

./: .gitignore  Dockerfile  LICENSE  README  README.md  ae.py  autoencoder.py  cmd.txt  competitors.py  configs copy.json  configs.json  download.py  feature_bagging.py  feature_selection.py  housekeeping.py  job.py  job_ccfraud.py  job_ccfraud_strat.py  job_cifar10.py  job_competitors_ccfraud.py  job_competitors_cifar10.py  job_mnist.py  job_sat.py  job_sat_auroc.py  jobs.py  one_model.py  output_data.csv  params.csv  params_1.csv  params_2.csv  params_4.csv  params_5.csv  params_ae_lin.csv  params_ccfraud_100.csv  params_ccfraud_100_1.csv  params_ccfraud_50.csv  params_ccfraud_50_1.csv  pre_process.py  pyproject.toml  rbm.py  (+20 more)
.github/workflows/: release-package.yml
adess/: __main__.py  adess.py  autoencoder.py  feature_selection.py  one_model.py  pre_process.py  rbm.py
params/: cifar10.csv  img.csv  main.csv  mnist.csv  p_ccf_300.csv  p_cifar_ae_lin.csv  p_cifar_rbm_lin.csv  p_cifar_slurm.csv  p_img_300.csv  p_mnist_ae_lin.csv  p_norm_pca_lin_grow.csv  p_pca_lin_grow.csv  p_sat_100.csv  p_sat_300.csv  p_tab_100.csv  p_tab_300.csv  params.csv  params_ccfraud_50.csv  params_nmf.csv  params_rand_1st.csv  sat.csv  tab.csv
src/: autoencoder.py  competitors.py  feature_bagging.py  feature_selection.py  main.py  one_model.py  pre_process.py  rbm.py  sean.py
src/config/: img.csv  tab.csv
